Update html and css

--- a/index.html
+++ b/index.html
@@ -34,33 +34,27 @@
 
     <div class="content two">
       <h2>Some random information.</h2>
-      <div class="example" id="one">
-        <div class="box-img">
-          <img src="#" alt="an image">
+      <div class="examples">
+        <div class="example" id="one">
+          <div class="box-img">an image</div>
+          <div class="subtext">this is some subtext under an
+            illustration or image</div>
         </div>
-        <div class="subtext">this is some subtext under an
-          illustration or image</div>
-      </div>
-      <div class="example" id="two"> 
-        <div class="box-img">
-          <img src="#" alt="an image">
+        <div class="example" id="two"> 
+          <div class="box-img">an image</div>
+          <div class="subtext">this is some subtext under an
+            illustration or image</div>
         </div>
-        <div class="subtext">this is some subtext under an
-          illustration or image</div>
-      </div>
-      <div class="example" id="three">
-        <div class="box-img">
-          <img src="#" alt="an image">
+        <div class="example" id="three">
+          <div class="box-img">an image</div>
+          <div class="subtext">this is some subtext under an
+            illustration or image</div>
         </div>
-        <div class="subtext">this is some subtext under an
-          illustration or image</div>
-      </div>
-      <div class="example" id="four">
-        <div class="box-img">
-          <img src="#" alt="an image">
+        <div class="example" id="four">
+          <div class="box-img">an image</div>
+          <div class="subtext">this is some subtext under an
+            illustration or image</div>
         </div>
-        <div class="subtext">this is some subtext under an
-          illustration or image</div>
       </div>
     </div>
 
