Add border code

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <button>Sign up</button>
         </div>
         <div class="right">
-          <div id="big-img">this is a placeholder for an image</div>
-        </div>
+          <div id="big-img">this is a placeholder for atn image</div>
+        </div>heit st
       </div>
     </div>
 
