--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="right">
           <div id="big-img">this is a placeholder for atn image</div>
-        </div>heit st
+        </div>
       </div>
     </div>
 
@@ -74,7 +74,9 @@
         <p>Sign up for our product by clicking that button 
           right over there!</p>
       </div>
-      <button>Sign up</button>
+      <div class="button-right">
+        <button>Sign up</button>
+      </div>
     </div>
 
     <div class="footer">Copyright &copy; The Odin Project 2021</div>
